@@ -103,6 +103,9 @@ Changed:
  - Harder to create chunkbans with new system
  [Addons, integration] - Fluid Blob effects registry has been changed to work with Fluid Blob bursts rather than single Fluid Blobs. This will break already existing integration.
 - Separated flak burst from shrapnel burst
+- Added fluid drag
+ - Has data pack config
+ - Currently supports water, lava, honey, and chocolate
 [Addons, integration] - Added ability to register multiple fluid blob effect handlers for a single fluid type
 - Refactor projectile properties to be less inheritance-based (BREAKING)
  - New approach involves projectile-specific serializers that projectiles must reference instead of getting wildcard
